<resources>
    <!-- faq-->
    <string name="slf_faq_input_hint">Please briefly describe your problem</string>
    <string name="slf_faq_title">Chat Bot</string>
    <string name="slf_top_question">Top questions</string>
    <string name="slf_related_question">Related questions:</string>
    <string name="slf_input_500_toast_text">500 characters limit</string>

    <item name="slf_adatper_utils" type="id"></item>
    <!--titlebar-->
    <string name="app_name">SLFeedback</string>
    <string name="slf_title_cancel">Cancel</string>


    <!--feedback photoseletor-->
    <string name="slf_title_save">save</string>
    <string name="slf_only_select_3">Only select up to 3 images.</string>
    <string name="slf_title_activity_slfbase">SLFBaseActivity</string>
    <string name="slf_feedback_problem_description">Please describe your problem and any feedback you have. You can add up to 3 photos to help you describe the problem.</string>
    <string name="slf_feedback_selector_service">Please select your service type</string>
    <string name="slf_feedback_selector_service_title">Service type</string>
    <string name="slf_feedback_selector_problem">Please select your problem type</string>
    <string name="slf_feedback_selector_problem_title">Problem type</string>
    <string name="slf_feedback_selector_problem_overview">Please select your problem overview</string>
    <string name="slf_feedback_selector_problem_overview_title">Problem overview</string>
    <string name="slf_feedback_problem_description_title">Description</string>
    <string name="slf_feedback_font_count">%1$d/1000</string>
    <string name="slf_feedback_photo_count">%1$d/3</string>
    <string name="slf_feedback_email_title">Email:</string>
    <string name="slf_feedback_email_hint">Please enter your email address</string>
    <string name="slf_feedback_email_error">Please enter a valid email address</string>
    <string name="slf_feedback_send_log">Send Log</string>
    <string name="slf_feedback_submit_feedback">Submit feedback</string>
    <string name="slf_feedback_title_content">Feedback</string>
    <string name="slf_feedback_problem_font_least">Feedback description should be at least 10 characters.</string>
    <string name="slf_feedback_problem_font_least_all_space">Feedback description should be at least 10 characters.</string>
    <string name="slf_feedback_dilaog_per_title">Request Phone Access</string>
    <string name="slf_feedback_dilaog_per_go_to_set">Go to Settings</string>
    <string name="slf_feedback_dilaog_per_content">To enable this feature,the RVI app requests permission to access your phone\'s ablum.</string>
    <string name="slf_feedback_dilaog_resure_title">Discard Feedback</string>
    <string name="slf_feedback_dilaog_resure_content">You have filled out this feedback content, click OK to discard this feedback.</string>
    <string name="slf_feedback_dilaog_resure_ok">OK</string>
    <string name="slf_feedback_grid_bottom_left">Preview</string>
    <string name="slf_feedback_grid_bottom_right">Done\(%1$d\)</string>
    <string name="slf_feedback_grid_bottom_right_no_selected">Done</string>
    <string name="slf_feedback_success_center_title">Submission successful</string>
    <string name="slf_feedback_success_center_logid">Log ID:%1$d</string>
    <string name="slf_feedback_success_center_copy">Copy</string>
    <string name="slf_feedback_success_bottom_finish">Finish</string>
    <string name="slf_feedback_upload_photo_video">Photo uploading, please hold on.</string>
    <string name="slf_common_network_error">No network available.</string>
    <string name="slf_submit_fail_text">Failed to submit feedback, try again</string>
    <string name="slf_submit_if_uploading">Photo uploading, please hold on.</string>
    <string name="slf_history_feedback_title">In progress</string>
    <string name="slf_history_all_feedback_title">All</string>
    <string name="slf_feedback_submit_success_copy">Copied to clipboard</string>
    <string name="slf_photo_preview_retake_photo">Retake</string>
    <string name="slf_photo_preview_use_photo">Use photo</string>
    <string name="slf_feedback_list_item_title_in_progress">In progress</string>
    <string name="slf_feedback_list_item_title_to_be_processed">To be processed</string>
    <string name="slf_feedback_list_item_title_finished">Finished</string>
    <string name="slf_feedback_list_item_no_item">No feedback found</string>
    <string name="slf_feedback_list_item_id">Feedback ID: %1$d</string>
    <string name="slf_feedback_list_leave_message_bottom_text">Continue to Leave a Message</string>
    <string name="slf_feedback_list_leave_message_title_text">Details</string>
    <string name="slf_feedback_list_continue_leave_message_bottom_text">Send</string>
    <string name="slf_feedback_list_send_log">Sent successfully.</string>
    <string name="slf_camera_mode_photo">PHOTO</string>
    <string name="slf_camera_mode_video">VIDEO</string>
    <string name="slf_first_page_no_network">No Internet connection</string>
    <string name="slf_first_page_no_network_sub">Please check your network connection and try again.</string>
    <string name="slf_first_page_request_fail">Request Failed</string>
    <string name="slf_first_page_request_fail_sub">The network is weak or the server is down, request for data failed</string>
    <string name="slf_first_page_no_network_try_again">Try again</string>
    <string name="slf_faq_detail_btton_text">Unsolved? Submit feedback ~</string>
    <string name="slf_feedback_detail_send_log_success">Log has been sent</string>
    <!--help and feedback-->
    <string name="slf_common_request_error">Operation failed.</string>
    <string name="slf_help_and_feedback_grid_title">All device types</string>
    <string name="slf_help_and_feedback_bar_title">Help &#038; Feedback</string>
    <string name="slf_help_and_feedback_chat_bot">Chat Bot</string>

    <string name="slf_help_and_feedback_feed_back">Feedback</string>
    <string name="slf_help_and_feedback_faq_list">FAQ</string>
    <string name="slf_create_feedback_illegal_world_text">The content you entered contains sensitive words, please re-enter</string>
    <string name="slf_user_device_service_type">My devices</string>
<!--    <string name="slf_permission_text">Permission disabled, please grant manually</string>-->
<!--    <string name="slf_permission_text_setting">Setting</string>-->
    <string name="slf_permission_text_title">Request Phone Access</string>
    <string name="slf_permission_text_content">To enable this feature, the Psyncup app requests permission to access your phone\'s album.</string>
    <string name="slf_permission_text_go_to_set">Go to Settings</string>

    <string name="loading1">loading   </string>
    <string name="loading2">loading.  </string>
    <string name="loading3">loading.. </string>


    <!--Adapter utils-->
    <string name="loading4">loading...</string>
</resources>