<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:layout_marginBottom="16dp">


    <com.sandglass.sandglasslibrary.commonui.SLFSwipeRefreshLayout
        android:id="@+id/slf_feedback_list_refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/slf_histroy_feedback_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.sandglass.sandglasslibrary.commonui.SLFSwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/slf_feedback_list_no_item_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <ImageView
            android:id="@+id/slf_feedback_list_no_item_img"
            android:layout_width="227dp"
            android:layout_height="161dp"
            android:layout_gravity="center"
            android:src="@drawable/slf_feedback_list_no_item" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slf_feedback_no_feedback"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/slf_feedback_list_item_no_item"
            android:textColor="@color/slf_sub_title_color"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slf_feedback_no_network"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/slf_first_page_no_network_sub"
            android:textColor="@color/slf_first_page_no_network_warning"
            android:alpha="0.5"
            android:textSize="16sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/slf_feedback_list_try_again"
            android:background="@drawable/slf_first_page_no_network_btn_bg"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:textSize="20sp"
            android:textColor="@color/slf_first_page_try_again_text"
            android:text="@string/slf_first_page_no_network_try_again"
            android:textAllCaps="false"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_marginTop="120dp"/>
    </LinearLayout>
</RelativeLayout>