<com.sandglass.sandglasslibrary.commonui.SLFFITRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/slf_detail_leave_message_list_color"
    android:fitsSystemWindows="true">
    android:background="@color/slf_detail_header_bg_color"
    <include layout="@layout/slf_all_common_feedback_detail_title" />

    <RelativeLayout
        android:id="@+id/slf_feedback_list_detail_header_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slf_title_bar"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:background="@color/slf_detail_header_bg_color">

        <TextView
            android:id="@+id/slf_feedback_list_item_title_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slf_feedback_list_item_title_in_progress"
            android:textColor="@color/slf_theme_color"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/slf_feedback_list_item_title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/slf_feedback_list_item_id"
            android:textColor="@color/slf_detail_id_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/slf_feedback_list_item_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/slf_feedback_list_item_title_status"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="16dp"
            android:text="Service type/Problem type/Problem overview"
            android:textColor="@color/slf_detail_type_text_color"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:id="@+id/slf_feedback_list_header_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/slf_feedback_list_detail_header_relative"
        android:background="@color/slf_detail_line_color" />


    <com.sandglass.sandglasslibrary.commonui.slfrefreshlayout.SLFSmartRefreshLayout
        android:id="@+id/slf_feedback_list_detail_refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/slf_feedback_list_bottom_relative"
        android:layout_below="@+id/slf_feedback_list_header_line"
        android:background="@color/black"
        android:fadingEdge="none"
        android:overScrollMode="never"
        app:srlAccentColor="@color/transparent"
        app:srlPrimaryColor="@color/transparent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/slf_feedback_list_leave_message_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/slf_detail_leave_message_list_color"
            android:fadingEdge="none"
            android:overScrollMode="never"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />
    </com.sandglass.sandglasslibrary.commonui.slfrefreshlayout.SLFSmartRefreshLayout>

    <RelativeLayout
        android:id="@+id/slf_feedback_list_bottom_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/slf_detail_header_bg_color">

        <View
            android:id="@+id/slf_feedback_list_bottom_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@color/slf_detail_line_color" />

        <LinearLayout
            android:id="@+id/slf_feedback_list_leave_message_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/slf_feedback_list_bottom_line"
            android:background="@color/slf_detail_header_bg_color"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/slf_feedback_list_leave_message_bottom_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="46dp"
                android:text="@string/slf_feedback_list_leave_message_bottom_text"
                android:textColor="@color/slf_alert_item_highlight_color"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>
</com.sandglass.sandglasslibrary.commonui.SLFFITRelativeLayout>